<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/misc_control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/movement_list_title_3"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>

    <Switch
        android:id="@+id/lock_wheel"
        android:layout_width="104dp"
        android:layout_height="55dp"
        android:layout_weight="1"
        android:splitTrack="false"
        android:text="@string/movement_text_wheel"
        android:textColor="#008F36"
        app:layout_constraintTop_toBottomOf="@id/misc_control"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/detect_drop"/>

    <CheckBox
        android:id="@+id/detect_drop"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_weight="1"
        android:text="@string/movement_btn_text_detect_drop"
        android:textColor="#008F36"
        app:layout_constraintTop_toTopOf="@id/lock_wheel"
        app:layout_constraintLeft_toRightOf="@id/lock_wheel"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/text_movement_forward_backward"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/movement_text_forward_backward"
        app:layout_constraintTop_toBottomOf="@id/lock_wheel"/>

    <EditText
        android:id="@+id/edit_movement_forward_backward"
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="text"
        android:hint="@string/movement_text_forward_backward_hint"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/text_movement_forward_backward"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="RtlSymmetry"/>

    <TextView
        android:id="@+id/text_movement_forward_backward_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movement_text_in"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="@id/edit_movement_forward_backward"
        app:layout_constraintBottom_toBottomOf="@id/edit_movement_forward_backward"
        app:layout_constraintLeft_toRightOf="@id/edit_movement_forward_backward"/>

    <EditText
        android:id="@+id/edit_movement_forward_backward_seconds"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="2"
        android:textSize="16sp"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="@id/edit_movement_forward_backward"
        app:layout_constraintBottom_toBottomOf="@id/edit_movement_forward_backward"
        app:layout_constraintLeft_toRightOf="@id/text_movement_forward_backward_in"
        tools:ignore="HardcodedText,LabelFor"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movement_text_seconds"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="@id/edit_movement_forward_backward"
        app:layout_constraintBottom_toBottomOf="@id/edit_movement_forward_backward"
        app:layout_constraintLeft_toRightOf="@id/edit_movement_forward_backward_seconds"/>

    <TextView
        android:id="@+id/text_movement_turn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/movement_text_turn"
        app:layout_constraintTop_toBottomOf="@id/edit_movement_forward_backward"/>

    <EditText
        android:id="@+id/edit_movement_turn"
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="text"
        android:hint="@string/movement_text_turn_hint"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/text_movement_turn"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="RtlSymmetry"/>

    <TextView
        android:id="@+id/text_movement_turn_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movement_text_in"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="@id/edit_movement_turn"
        app:layout_constraintBottom_toBottomOf="@id/edit_movement_turn"
        app:layout_constraintLeft_toRightOf="@id/edit_movement_turn"/>

    <EditText
        android:id="@+id/edit_movement_turn_seconds"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="2"
        android:textSize="16sp"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="@id/edit_movement_turn"
        app:layout_constraintBottom_toBottomOf="@id/edit_movement_turn"
        app:layout_constraintLeft_toRightOf="@id/text_movement_turn_in"
        tools:ignore="HardcodedText,LabelFor"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movement_text_seconds"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="@id/edit_movement_turn"
        app:layout_constraintBottom_toBottomOf="@id/edit_movement_turn"
        app:layout_constraintLeft_toRightOf="@id/edit_movement_turn_seconds"/>

    <Button
        android:id="@+id/button_movement_go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/movement_btn_text_go"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/edit_movement_turn"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/button_movement_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/movement_btn_text_stop"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/edit_movement_turn"
        app:layout_constraintLeft_toRightOf="@id/button_movement_go"/>

</android.support.constraint.ConstraintLayout>
