<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg_gray"
    android:id="@+id/bg"
    android:focusable="true"
    >


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="52sp"
        android:textColor="@android:color/white"
        android:text="@string/start_temperature_measure_example_title"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:textColor="@android:color/white"
        android:text="@string/start_temperature_measure_example_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


     <Button
        android:id="@+id/btn_demo_flir"
        android:text="@string/btn_measure_flir"
        android:layout_width="240dp"
        android:layout_height="160dp"
        android:textSize="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="100dp"
        app:layout_constraintTop_toBottomOf="@id/content"
        app:layout_constraintStart_toStartOf="parent"
        />

     <Button
        android:id="@+id/btn_demo_flir_kebbi_face"
        android:text="@string/btn_measure_flir_kebbi_face"
        android:layout_width="240dp"
        android:layout_height="160dp"
        android:textSize="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/content"
        app:layout_constraintStart_toEndOf="@id/btn_demo_flir"
        />
        
     <Button
        android:id="@+id/btn_demo_melexis"
        android:text="@string/btn_measure_melexis"
        android:layout_width="240dp"
        android:layout_height="160dp"
        android:textSize="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/content"
        app:layout_constraintStart_toEndOf="@id/btn_demo_flir_kebbi_face"
        />

     <TextView
        android:id="@+id/measure_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:textColor="@android:color/white"
        android:text=""
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/btn_demo_melexis"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
                
    <ImageButton
        android:id="@+id/imgbtn_quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:paddingLeft="40dp"
        android:paddingTop="35dp"
        android:src="@drawable/btn_close" />

</android.support.constraint.ConstraintLayout>